adding required fields

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<label for="pref-phone">Phone</label>
 				</fieldset>
 
-				<label for="my-state">State</label>
-				<select name="my-state" id="my-state">
+				<label for="my-state">State <span class="required">*</span></label>
+				<select name="my-state" id="my-state" required>
 					<option value="">Choose Your State</option>
 					<option value="AL">Alabama</option>
 					<option value="AK">Alaska</option>
