--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
 			<form action="https://wp.zybooks.com/form-viewer.php" method="post">
 				<label for="my-name">Full name<span class="required">*</span></label>
-				<input type="text" name="my-name" id="my-name" autocomplete="name" required>
+				<input type="text" name="my-name" id="my-name" autocomplete="name" required aria-invalid="true">
 
 				<label for="my-inbox">Email<span class="required">*</span></label>
-				<input type="email" name="my-inbox" id="my-inbox" autocomplete="email" required>
+				<input type="email" name="my-inbox" id="my-inbox" autocomplete="email" required aria-invalid="true">
 
 				<label for="my-phone">Phone Number<span class="required">*</span></label>
-				<input type="tel" name="my-phone" id="my-phone" autocomplete="tel" required >
+				<input type="tel" name="my-phone" id="my-phone" autocomplete="tel" required aria-invalid="true">
 
 				<fieldset>
 					<legend>Prefered Contact Method<span class="required">*</span></legend>
@@ -50,7 +50,7 @@
 				</fieldset>
 
 				<label for="my-state">State <span class="required">*</span></label>
-				<select name="my-state" id="my-state" required>
+				<select name="my-state" id="my-state" required aria-invalid="true">
 					<option value="">Choose Your State</option>
 					<option value="AL">Alabama</option>
 					<option value="AK">Alaska</option>
